# lmp_analysis

./: .replit  DATALOAD_GUIDE.md  analytics.py  app.py  backfill_bx.py  backfill_month_hour.py  bx_calculator.py  charts.py  chatbot.py  data_processor.py  database.py  import_eia_zones.py  init_lean_schema.sql  load_full_year.py  node_zone_mapping.py  parquet_storage.py  preprocessing.py  pyproject.toml  reducing_credits.txt  replit.md  reprocess_parquet.py  s3_data_loader.py  test_analytics_baseline.py
attached_assets/: ATL_FNM_MAPPING_DATA_GRP_CISO_AS_24M3_DB127_v5_1765396332817.csv  Zone_-_Node_Mappings_---_csv_1765396332817.csv  caiso_lmp_da_hr_zones_2020_1768182367068.csv  caiso_lmp_da_hr_zones_2021_1768182367068.csv  caiso_lmp_da_hr_zones_2024_1768182367068.csv  caiso_lmp_da_hr_zones_2025_1768182367068.csv  zone_classified_output_1_1768176554608.csv
